# esp32-softap-ota

./: partitions.csv  sdkconfig
bootloader_components/bootloader_select/: CMakeLists.txt  Kconfig  bootloader_select.c  i2c_bitbang.c  i2c_bitbang.h
main/: main.c
main/web/: index.html
